--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,4 +1,4 @@
-name: Continuous Deployment Workflow
+name: Continuous Deployment Workflow for Production
 
 # This workflow is triggered whenever commits are pushed to the main branch
 on:
