--- a/.github/workflows/cdstaging.yaml
+++ b/.github/workflows/cdstaging.yaml
@@ -1,4 +1,4 @@
-name: Continuous Deployment Workflow
+name: Continuous Deployment Workflow for Staging
 
 # This workflow is triggered whenever commits are pushed to the main branch
 on:
